--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
       <nav class="header-nav">
         <ul class="header-nav-list">
           <li class="header-nav-list-item">
-            <a class="header-nav-list-link" href="">Home</a>
+            <a class="header-nav-list-item-link" href="">Home</a>
           </li>
           <li class="header-nav-list-item">
-            <a class="header-nav-list-link" href="">About</a>
+            <a class="header-nav-list-item-link" href="">About</a>
           </li>
           <li class="header-nav-list-item">
-            <a class="header-nav-list-link" href="">Service</a>
+            <a class="header-nav-list-item-link" href="">Service</a>
           </li>
           <li class="header-nav-list-item">
-            <a class="header-nav-list-link" href="">Menu</a>
+            <a class="header-nav-list-item-link" href="">Menu</a>
           </li>
           <li class="header-nav-list-item">
-            <a class="header-nav-list-link" href="">Contact</a>
+            <a class="header-nav-list-item-link" href="">Contact</a>
           </li>
         </ul>
       </nav>
@@ -57,8 +57,141 @@
         </p>
         <button class="section-hero-btn" type="button">Order Now</button>
         <img src="" alt="" />
+        <img
+          src="./images/section_hero/salat.png"
+          alt="Salat"
+          width="528"
+          height="528"
+        />
       </section>
       <!-- #endregion Section1 Hero -->
+      <!-- #region Section2 Offerings -->
+      <section class="section-offerings">
+        <h2 class="section-offerings-title">
+          What`s Special About Our Offerings
+        </h2>
+        <p class="section-offerings-text">
+          With our platform, you can browse through a diverse selection of
+          cuisines and local restaurants, and choose from a variety of dishes
+          that cater to your specific taste buds.
+        </p>
+        <img
+          src="./images/section_offerings/aple.png"
+          alt="Green Apple"
+          width="396"
+          height="502"
+        />
+        <ul class="section-offerings-list">
+          <li class="section-offerings-list-item">
+            <h3 class="section-offerings-list-item-title">Fasest Delivery</h3>
+            <p class="section-offerings-list-item-text">
+              Our advanced logistics system and dedicated delivery partners
+              ensure that your meals are delivered to you within 30-minutes.
+            </p>
+          </li>
+          <li class="section-offerings-list-item">
+            <h3 class="section-offerings-list-item-title">Easy To Order</h3>
+            <p class="section-offerings-list-item-text">
+              You can browse through a wide variety of cuisines and restaurants,
+              select your favorite meals, and place your order in just a few
+              clicks.
+            </p>
+          </li>
+        </ul>
+        <button class="section-offerings-btn" type="button">Order Now</button>
+      </section>
+      <!-- #endregion Section2 Offerings -->
+      <!-- #region Section3 Favorites -->
+      <section class="section-favorites">
+        <h2 class="section-favorites-title">Some of Our Favorites</h2>
+        <p class="section-favorites-text">Looking for something delicious?</p>
+        <ul class="section-favorites-list">
+          <li class="section-favorites-list-item">
+            <a class="section-favorites-list-item-link" href=""
+              ><img
+                src="./images/section_favorites/gamburger.png"
+                alt="gamburger"
+                width="315"
+                height="315"
+            /></a>
+          </li>
+          <li class="section-favorites-list-item">
+            <a class="section-favorites-list-item-link" href=""
+              ><img
+                src="./images/section_favorites/pasta.png"
+                alt="pasta"
+                width="315"
+                height="315"
+            /></a>
+          </li>
+          <li class="section-favorites-list-item">
+            <a class="section-favorites-list-item-link" href=""
+              ><img
+                src="./images/section_favorites/pizza.png"
+                alt="pizza"
+                width="315"
+                height="315"
+            /></a>
+          </li>
+          <li class="section-favorites-list-item">
+            <a class="section-favorites-list-item-link" href=""
+              ><img
+                src="./images/section_favorites/chicken.png"
+                alt="chicken"
+                width="315"
+                height="315"
+            /></a>
+          </li>
+          <li class="section-favorites-list-item">
+            <a class="section-favorites-list-item-link" href=""
+              ><img
+                src="./images/section_favorites/salat.png"
+                alt="salat"
+                width="315"
+                height="315"
+            /></a>
+          </li>
+          <li class="section-favorites-list-item">
+            <a class="section-favorites-list-item-link" href=""
+              ><img
+                src="./images/section_favorites/borshch.png"
+                alt="borshch"
+                width="315"
+                height="315"
+            /></a>
+          </li>
+        </ul>
+      </section>
+      <!-- #endregion Section3 Favorites -->
+      <!-- #region Section4 Comments -->
+      <section>
+        <h2>What our Customers Say</h2>
+        <p>
+          Don't just take our word for it - see what our satisfied customers
+          have to say
+        </p>
+        <ul>
+          <li>
+            <p>
+              "The Best app I have used to order food in a while, so many
+              options to choose from too, I would recommend to a freind, No
+              questions asked"
+            </p>
+            <ul>
+              <li>
+                <img
+                  src="./images/section_comments/dude1.png"
+                  alt="dude first"
+                />
+              </li>
+              <li><h4>Sumith Shah</h4></li>
+              <li><p>Some Dude</p></li>
+            </ul>
+          </li>
+          <li></li>
+        </ul>
+      </section>
+      <!-- #endregion Section4 Comments -->
     </main>
     <!-- #region Footer -->
     <footer></footer>
