--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Delivery</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- #region connection Normalize browsers' default style -->
     <link
       rel="stylesheet"
@@ -17,150 +23,166 @@
   </head>
   <body>
     <!-- #region Header -->
-    <header>
-      <a class="header-logo" href="./index.html"
-        ><img src="./images/logo.svg" alt="logo" width="66" height="52"
-      /></a>
-      <nav class="header-nav">
-        <ul class="header-nav-list">
-          <li class="header-nav-list-item">
-            <a class="header-nav-list-item-link" href="">Home</a>
-          </li>
-          <li class="header-nav-list-item">
-            <a class="header-nav-list-item-link" href="">About</a>
-          </li>
-          <li class="header-nav-list-item">
-            <a class="header-nav-list-item-link" href="">Service</a>
-          </li>
-          <li class="header-nav-list-item">
-            <a class="header-nav-list-item-link" href="">Menu</a>
-          </li>
-          <li class="header-nav-list-item">
-            <a class="header-nav-list-item-link" href="">Contact</a>
-          </li>
-        </ul>
-      </nav>
-      <button class="header-btn" type="button">Order Now</button>
+    <header class="header">
+      <div class="container header-container">
+        <a class="header-logo" href="./index.html"
+          ><img src="./images/logo.svg" alt="logo" width="66" height="52"
+        /></a>
+        <nav class="header-nav">
+          <ul class="header-nav-list">
+            <li class="header-nav-list-item">
+              <a class="header-nav-list-item-link" href="">Home</a>
+            </li>
+            <li class="header-nav-list-item">
+              <a class="header-nav-list-item-link" href="">About</a>
+            </li>
+            <li class="header-nav-list-item">
+              <a class="header-nav-list-item-link" href="">Service</a>
+            </li>
+            <li class="header-nav-list-item">
+              <a class="header-nav-list-item-link" href="">Menu</a>
+            </li>
+            <li class="header-nav-list-item">
+              <a class="header-nav-list-item-link" href="">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="main-btn" type="button">Order Now</button>
+      </div>
     </header>
     <!-- #endregion Header -->
     <main>
       <!-- #region Section1 Hero -->
       <section class="section-hero">
-        <h1 class="section-hero-title">
-          Enjoy Your Favorite Food From Anywhere
-        </h1>
-        <p class="section-hero-text">
-          With just a few clicks, you can have your favorite meals delivered
-          straight to your doorstep, no matter where you are. Order now and
-          enjoy a hassle-free and delicious meal from the comfort of your own
-          home.
-        </p>
-        <button class="section-hero-btn" type="button">Order Now</button>
-        <img src="" alt="" />
-        <img
-          src="./images/section_hero/salat.png"
-          alt="Salat"
-          width="528"
-          height="528"
-        />
+        <div class="container hero-container">
+          <div class="hero-wrapper">
+            <h1 class="section-hero-title">
+              Enjoy Your Favorite Food From Anywhere
+            </h1>
+            <p class="section-hero-text">
+              With just a few clicks, you can have your favorite meals delivered
+              straight to your doorstep, no matter where you are. Order now and
+              enjoy a hassle-free and delicious meal from the comfort of your
+              own home.
+            </p>
+            <button class="main-btn" type="button">Order Now</button>
+          </div>
+          <img src="" alt="" />
+          <img
+            src="./images/section_hero/salat.png"
+            alt="Salat"
+            width="528"
+            height="528"
+          />
+        </div>
       </section>
       <!-- #endregion Section1 Hero -->
       <!-- #region Section2 Offerings -->
       <section class="section-offerings">
-        <h2 class="section-offerings-title">
-          What`s Special About Our Offerings
-        </h2>
-        <p class="section-offerings-text">
-          With our platform, you can browse through a diverse selection of
-          cuisines and local restaurants, and choose from a variety of dishes
-          that cater to your specific taste buds.
-        </p>
-        <img
-          src="./images/section_offerings/aple.png"
-          alt="Green Apple"
-          width="396"
-          height="502"
-        />
-        <ul class="section-offerings-list">
-          <li class="section-offerings-list-item">
-            <h3 class="section-offerings-list-item-title">Fasest Delivery</h3>
-            <p class="section-offerings-list-item-text">
-              Our advanced logistics system and dedicated delivery partners
-              ensure that your meals are delivered to you within 30-minutes.
+        <div class="container">
+          <img
+            src="./images/section_offerings/aple.png"
+            alt="Green Apple"
+            width="396"
+            height="502"
+          />
+          <div class="offering-wrapper">
+            <h2 class="section-offerings-title">
+              What`s Special About Our Offerings
+            </h2>
+            <p class="section-offerings-text">
+              With our platform, you can browse through a diverse selection of
+              cuisines and local restaurants, and choose from a variety of
+              dishes that cater to your specific taste buds.
             </p>
-          </li>
-          <li class="section-offerings-list-item">
-            <h3 class="section-offerings-list-item-title">Easy To Order</h3>
-            <p class="section-offerings-list-item-text">
-              You can browse through a wide variety of cuisines and restaurants,
-              select your favorite meals, and place your order in just a few
-              clicks.
-            </p>
-          </li>
-        </ul>
-        <button class="section-offerings-btn" type="button">Order Now</button>
+            <ul class="section-offerings-list">
+              <li class="section-offerings-list-item">
+                <h3 class="section-offerings-list-item-title">
+                  Fasest Delivery
+                </h3>
+                <p class="section-offerings-list-item-text">
+                  Our advanced logistics system and dedicated delivery partners
+                  ensure that your meals are delivered to you within 30-minutes.
+                </p>
+              </li>
+              <li class="section-offerings-list-item">
+                <h3 class="section-offerings-list-item-title">Easy To Order</h3>
+                <p class="section-offerings-list-item-text">
+                  You can browse through a wide variety of cuisines and
+                  restaurants, select your favorite meals, and place your order
+                  in just a few clicks.
+                </p>
+              </li>
+            </ul>
+            <button class="section-offerings-btn main-btn" type="button">
+              Order Now
+            </button>
+          </div>
+        </div>
       </section>
       <!-- #endregion Section2 Offerings -->
       <!-- #region Section3 Favorites -->
       <section class="section-favorites">
-        <h2 class="section-favorites-title">Some of Our Favorites</h2>
-        <p class="section-favorites-text">Looking for something delicious?</p>
-        <ul class="section-favorites-list">
-          <li class="section-favorites-list-item">
-            <a class="section-favorites-list-item-link" href=""
-              ><img
-                src="./images/section_favorites/gamburger.png"
-                alt="gamburger"
-                width="315"
-                height="315"
-            /></a>
-          </li>
-          <li class="section-favorites-list-item">
-            <a class="section-favorites-list-item-link" href=""
-              ><img
-                src="./images/section_favorites/pasta.png"
-                alt="pasta"
-                width="315"
-                height="315"
-            /></a>
-          </li>
-          <li class="section-favorites-list-item">
-            <a class="section-favorites-list-item-link" href=""
-              ><img
-                src="./images/section_favorites/pizza.png"
-                alt="pizza"
-                width="315"
-                height="315"
-            /></a>
-          </li>
-          <li class="section-favorites-list-item">
-            <a class="section-favorites-list-item-link" href=""
-              ><img
-                src="./images/section_favorites/chicken.png"
-                alt="chicken"
-                width="315"
-                height="315"
-            /></a>
-          </li>
-          <li class="section-favorites-list-item">
-            <a class="section-favorites-list-item-link" href=""
-              ><img
-                src="./images/section_favorites/salat.png"
-                alt="salat"
-                width="315"
-                height="315"
-            /></a>
-          </li>
-          <li class="section-favorites-list-item">
-            <a class="section-favorites-list-item-link" href=""
-              ><img
-                src="./images/section_favorites/borshch.png"
-                alt="borshch"
-                width="315"
-                height="315"
-            /></a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-favorites-title">Some of Our Favorites</h2>
+          <p class="section-favorites-text">Looking for something delicious?</p>
+          <ul class="section-favorites-list">
+            <li class="section-favorites-list-item">
+              <a class="section-favorites-list-item-link" href=""
+                ><img
+                  src="./images/section_favorites/gamburger.png"
+                  alt="gamburger"
+                  width="315"
+                  height="315"
+              /></a>
+            </li>
+            <li class="section-favorites-list-item">
+              <a class="section-favorites-list-item-link" href=""
+                ><img
+                  src="./images/section_favorites/pasta.png"
+                  alt="pasta"
+                  width="315"
+                  height="315"
+              /></a>
+            </li>
+            <li class="section-favorites-list-item">
+              <a class="section-favorites-list-item-link" href=""
+                ><img
+                  src="./images/section_favorites/pizza.png"
+                  alt="pizza"
+                  width="315"
+                  height="315"
+              /></a>
+            </li>
+            <li class="section-favorites-list-item">
+              <a class="section-favorites-list-item-link" href=""
+                ><img
+                  src="./images/section_favorites/chicken.png"
+                  alt="chicken"
+                  width="315"
+                  height="315"
+              /></a>
+            </li>
+            <li class="section-favorites-list-item">
+              <a class="section-favorites-list-item-link" href=""
+                ><img
+                  src="./images/section_favorites/salat.png"
+                  alt="salat"
+                  width="315"
+                  height="315"
+              /></a>
+            </li>
+            <li class="section-favorites-list-item">
+              <a class="section-favorites-list-item-link" href=""
+                ><img
+                  src="./images/section_favorites/borshch.png"
+                  alt="borshch"
+                  width="315"
+                  height="315"
+              /></a>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- #endregion Section3 Favorites -->
       <!-- #region Section4 Comments -->
