add styles btn etc

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </p>
               </li>
             </ul>
-            <button class="section-offerings-btn main-btn" type="button">
+            <button class="main-btn offerings-btn" type="button">
               Order Now
             </button>
           </div>
